--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,19 +16,19 @@ body {
 }
 
 .get {
-    background: rgba(84, 172, 255, 0.2);
+    background: rgba(61, 160, 253, 0.2) !important;
 }
 
 .post {
-    background: rgba(153, 250, 174, 0.2);
+    background: rgba(95, 251, 129, 0.2) !important;
 }
 
 .put {
-    background: rgba(248, 193, 130, 0.2);
+    background: rgba(238, 161, 73, 0.2) !important;
 }
 
 .delete {
-    background: rgba(255, 90, 90, 0.2);
+    background: rgba(250, 54, 54, 0.2) !important;
 }
 
 
